# the-place

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: codeql.yml  ruff.yml  ty.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/private_api/: pyproject.toml
backend/private_api/source/: config.py
backend/private_api/source/api/: main.py
backend/private_api/source/schemas/common/: sort.py
backend/public_api/: entrypoint.sh  pyproject.toml
backend/public_api/source/: config.py  main.py
backend/public_api/source/api/: main.py
backend/public_api/source/api/auth/: config.py  router.py  service.py  utils.py
backend/public_api/source/database/: __init__.py
backend/public_api/source/database/migrations/: env.py
backend/public_api/source/database/models/: user.py
backend/public_api/source/database/repos/: base.py  user.py
backend/public_api/source/schemas/auth/: common.py  forms.py  responses.py
backend/public_api/source/schemas/common/: forms.py  pagination.py
backend/public_api/source/utils/: auth.py
backend/source/: config.py  main.py
backend/source/api/: main.py
backend/source/api/auth/: config.py  router.py  service.py  utils.py
backend/source/api/media/: config.py  router.py  service.py
backend/source/api/post/: __init__.py  config.py  router.py  service.py
backend/source/certs/: jwt-private.pem  jwt-public.pem  readme.md
backend/source/database/: main.py
backend/source/database/migrations/: env.py
backend/source/database/models/: __init__.py  base.py  post.py  post_comment.py  post_reaction.py  user.py
backend/source/database/repos/: post.py  post_comment.py  post_reaction.py  user.py
backend/source/enums/: post_reaction_type.py  user_role.py
backend/source/schemas/auth/: forms.py
backend/source/schemas/common/: crud.py  forms.py  list.py
backend/source/schemas/post/: bodies.py  common.py  params.py  responses.py
backend/source/utils/: auth.py  user.py
envs/: .env.backend  .env.db  .env.private_api  .env.public_api
frontend/: .dockerignore  Dockerfile
frontend/source/: index.html  package-lock.json  package.json
frontend/source/src/app/: App.tsx  index.css
frontend/source/src/app/components/: NavBar.css  NavBar.tsx
frontend/source/src/app/pages/: About.tsx  CreatePost.tsx  Forum.tsx  Home.tsx  Section.tsx
