[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
src = ["."]
line-length = 88
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "D100",
    "D102",
    "D103",
    "D104",
    "D107",
    "B008",
    "S104",
    "D203",
    "D212",
    "ISC001",
    "COM812",
    "INP001",
    "PGH003",
    "D101",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true


[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"
