[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.ruff]
src = ["."]
line-length = 88
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "D100",
    "D102",
    "D103",
    "D104",
    "D107",
    "B008",
    "S104",
    "D203",
    "D212",
    "ISC001",
    "COM812",
    "INP001",
    "PGH003",
    "D101",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true


[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"
